# idle-game-example

./: .gitignore  Cargo.toml
src/: main.rs  pokemon.rs
src/archivo/: data.csv  data.txt  main.rs
src/cliente_servidor/: cliente.rs  cliente_udp.rs  servidor.rs  servidor_udp.rs
src/contador/: main.rs
src/idle_game/: gold.rs  main.rs  resource.rs  water.rs  wood.rs
src/productor_consumidor/: main.rs
src/secuencia/: main.rs
src/transacciones/: coordinator.rs  stakeholder.rs
