[package]
name = "ejercicios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "idle_game"
path = "src/idle_game/main.rs"

[[bin]]
name = "secuencia"
path = "src/secuencia/main.rs"

[[bin]]
name = "contador"
path = "src/contador/main.rs"

[[bin]]
name = "productor_consumidor"
path = "src/productor_consumidor/main.rs"

[[bin]]
name = "archivo"
path = "src/archivo/main.rs"

[[bin]]
name = "servidor"
path = "src/cliente_servidor/servidor.rs"

[[bin]]
name = "cliente"
path = "src/cliente_servidor/cliente.rs"

[dependencies]
rand = "0.8"
std-semaphore = "0.1.0"